--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple RESTful Blog API with CRUD operations, built with **Node.js, Express & Mongoose**.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,9 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "mongoose": "^8.13.0",
+    "mongoose": "^8.13.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
